# generic-vector

./: CMakeLists.txt  README.md  main.c
include/: list.h  poison.h  tests.h  types.h  vector.h
src/: vector.c
test/: vector.test.c
